# Clover-KDS

./: .gitignore  Dockerfile  README.md  clover_api.py  kds_display.py  pyproject.toml  testorderapi.py
.devcontainer/: devcontainer.json
templates/: orders.html
